--- a/_pages/gewinnspiel/index.html
+++ b/_pages/gewinnspiel/index.html
@@ -25,12 +25,13 @@ prizes:
   - id: three
     title: "Erste Wahl für die Reise ins Land am Kap: South African Airways"
     content: "Mit South African Airways, Südafrikas nationaler Fluggesellschaft und Mitglied der Star Alliance, beginnt Ihr Südafrika-Erlebnis bereits an Bord. South African Airways fliegt täglich über Nacht von Frankfurt und München zum Drehkreuz Johannesburg und von dort weiter zu vielen weiteren Urlaubszielen im Südlichen Afrika. "
-    enter-cta: Mehr erfahren
-    external-link: "https://www.flysaa.com"
+    enter-cta: Jetzt teilnehmen
+    external-cta: Mehr erfahren
+    external-link: "https://www.flysaa.com/de_DE/"
 
   - id: two
     title: Erinnerungen, die bleiben – dank Nikon
-    content: "Ihre sichere Begleitung im Busch: die Nikon Z50, die kompakteste Nikon-Systemkamera, ebenso gut für Fotos wie für actionreiche 4K-Filme geeignet. Zwei Objektive sind ebenfalls mit dabei. Mit dem Weitwinkelobjektiv NIKKOR Z DX 16–50 mm (1:3,5–6,3 VR) fangen Sie auch auf kurze Distanzen alle Details ein. Das Telezoomobjektiv NIKKOR Z DX 50–250 mm (1:4,5–6,3 VR) ist Ihre erste Wahl für schnelle Bewegungen und ferne Einzelheiten. "
+    content: "Ihre sichere Begleitung im Busch: die Nikon Z 50, die kompakteste Nikon-Systemkamera, ebenso gut für Fotos wie für actionreiche 4K-Filme geeignet. Zwei Objektive sind ebenfalls mit dabei. Mit dem Weitwinkelobjektiv NIKKOR Z DX 16–50 mm (1:3,5–6,3 VR) fangen Sie auch auf kurze Distanzen alle Details ein. Das Telezoomobjektiv NIKKOR Z DX 50–250 mm (1:4,5–6,3 VR) ist Ihre erste Wahl für schnelle Bewegungen und ferne Einzelheiten."
     enter-cta: Jetzt teilnehmen
     external-cta: Mehr erfahren
     external-link: "https://www.mynikon.de/inspiration/nikon-magazin/jetzt-erhaeltlich-nikon-z50"
