--- a/_pages/index.html
+++ b/_pages/index.html
@@ -8,11 +8,12 @@ title: Übersicht
 banner:
   title: Südafrika
   title-sub: Wild auf Südafrika – Starten Sie jetzt Ihre Safari!
-  title-size: banner-title--xl
+  title-size: banner-title--xxl
+
 
 
 intro-title: "Auf Safari in der Regenbogennation"
-intro: "Eine Safari ist mehr als nur Wildtierbeobachtung. In Südafrika gehen Sie auf Großstadt-Safari in Johannesburg, auf Gourmet-Safari in den Winelands und auf Küstensafari entlang der über 3.000 Strandkilometer. Zusammen mit NIKON Fotograf Kristof Göttling gehen wir der faszinierenden Regenbogennation auf die&nbsp;Spur. "
+intro: "Eine Safari ist mehr als nur Wildtier&shy;beobach&shy;tung. In Südafrika gehen Sie auf Großstadt-Safari in Johannes&shy;burg, auf Gourmet-Safari in den Wine&shy;lands und auf Küsten&shy;safari entlang der über 3.000 Strand&shy;kilometer. Zusammen mit NIKON Fotograf Kristof Göttling gehen wir der faszinierenden Rege&shy;bogen&shy;nation auf die&nbsp;Spur. "
 
 bg-color: "bg--white"
 
@@ -39,7 +40,7 @@ bg-color: "bg--white"
 
     <div class="bob {% cycle '', 'bob--swap' %}">
       <div class="bob__img">
-        <a href="{{site.baseurl}}{{destination.url}}" class="bg-img bg-img--4-3 bv-box-shadow" style="background-image: url('{{site.img}}/content/{{destination.id}}/hero.jpg'); border: 10px solid #fff; {{destination.rotation}}"></a>
+        <a href="{{site.baseurl}}{{destination.url}}" class="bg-img bg-img--4-3 bv-box-shadow bv-mob-rotation" style="background-image: url('{{site.img}}/content/{{destination.id}}/hero.jpg'); border: 10px solid #fff; {{destination.rotation}}"></a>
       </div>
       <div class="bob__text ">
         <div class="space--sm"></div>
@@ -61,7 +62,7 @@ bg-color: "bg--white"
   {% include page/promo-signup.html %}
 
 
-<div class="vpad--sm bg--light bv-parallax" style="background-image: url('{{site.img}}/icons/bg-pattern-transp-50pc-2000px.png');">
+<div class="vpad--sm bg--light bv-parallax" style="background-image: url('{{site.img}}/icons/bg-pattern-transp-2000px.png');">
   <div class="container">
         <div class="space--xl"></div>
        <div class="text text--xxxl text--center">
